--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, sans-serif;
   background: linear-gradient(#9198e5,#e17b7b9c);
-  color: rgb(30, 120, 150);
+  color: #3b4598;
 }
 .titulos {
   text-align: center;
@@ -13,7 +13,7 @@ ul li {
   margin-bottom: 10px;
 }
 ul li a {
-  color: rgb(30, 120, 150);
+  color: #3b4598;
   text-decoration: none;
   padding: 5px;
 }
@@ -68,4 +68,18 @@ img {
   width: 500px;
   display: block;
   margin: auto;
+}
+#enviar {
+  min-width: 418px;
+}
+select {
+  color: #3b4598; 
+}
+#enviar {
+  color: #3b4598;
+  background-color: #dde0fb;
+}
+#enviar:hover {
+  transform: scale(1.1);
+  transition: 0.3s;
 }
